--- a/challenge/module1-lecture1-figma/index.html
+++ b/challenge/module1-lecture1-figma/index.html
@@ -10,9 +10,9 @@
     <div class="makers-main">
         <div class="makers-container">
             <div class="makers-textside">
-                <h2>My presentation page</h2>
-                <h1>Jerome Decinco</h1>
-                <h5>A Software & DevOps Engineer</h5>
+                <h2 class="makers-textside-title">My presentation page</h2>
+                <h1 class="makers-textside-name">Jerome Decinco</h1>
+                <h5 class="makers-textside-subtitle">A Software & DevOps Engineer</h5>
             </div>
         </div>
         <div class="makers-image">
@@ -21,77 +21,103 @@
     </div>
     <div class="makers-features">
         <div class="makers-features-container">
-          <div class="makers-features-text-container" >
-            <div class="MakersTextContent" style="align-self: stretch; height: 169px; flex-direction: column; justify-content: flex-start; align-items: center; gap: 24px; display: flex">
-              <div class="Education" style="align-self: stretch; text-align: center; color: #2ABDA3; font-size: 24px; font-family: Inter; font-weight: 600; text-transform: uppercase; word-wrap: break-word">Hobbies & Interests</div>
-              <div class="LearnHowToMakeAndPublishSitesWithFigma" style="align-self: stretch; text-align: center; color: black; font-size: 48px; font-family: Inter; font-weight: 700; word-wrap: break-word">The list of my hobbies and interest</div>
+            <div class="makers-features-text-container">
+                <div class="makers-features-text-content">
+                    <div class="makers-features-text-subtitle">
+                        <h4>Hobbies & Interests</h4>
+                    </div>
+                    <div class="makers-features-text-title">The list of my hobbies and interest</div>
+                </div>
             </div>
-          </div>
         </div>
-        <div class="Content" style="align-self: stretch; height: 268px; padding-bottom: 64px; background: white; flex-direction: column; justify-content: center; align-items: center; display: flex">
-          <div class="FeaturesGrid" style="width: 1100px; flex: 1 1 0; justify-content: space-between; align-items: flex-start; gap: 16px; display: inline-flex">
-            <div class="MediaObjects" style="flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 32px; display: inline-flex">
-              <div class="MakersMediaObject" style="align-self: stretch; justify-content: flex-start; align-items: flex-start; gap: 16px; display: inline-flex">
-                <div class="Text" style="flex: 1 1 0; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 8px; display: inline-flex">
-                  <div class="Studying" style="align-self: stretch; color: black; font-size: 24px; font-family: Inter; font-weight: 600; line-height: 24px; word-wrap: break-word">Studying</div>
-                  <div class="ILoveLearnSomethingNewEveryday" style="align-self: stretch; color: #0A2A42; font-size: 18px; font-family: Inter; font-weight: 400; line-height: 27px; word-wrap: break-word">I love learning something new everyday!</div>
+        <div class="list-content">
+            <div class="list-content-grid">
+                <div class="list-content-object-left">
+                    <div class="list-content-object-left-top">
+                        <div class="list-content-object-left-top-text">
+                            <div class="studying">Studying</div>
+                                <div class="studying-comment">I love learning something new everyday!</div>
+                        </div>
+                    </div>
+                    <div class="list-content-object-left-bot">
+                        <div class="list-content-object-left-bot-text" >
+                            <div class="hiking" >Hiking</div>
+                                <div class="hiking-comment" >Do some sports like hiking, cardio, biking is very important for health.</div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="MakersMediaObject" style="align-self: stretch; justify-content: flex-start; align-items: flex-start; gap: 16px; display: inline-flex">
-                <div class="Text" style="flex: 1 1 0; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 8px; display: inline-flex">
-                  <div class="PublishWithFigma" style="align-self: stretch; color: black; font-size: 24px; font-family: Inter; font-weight: 600; line-height: 24px; word-wrap: break-word">Hiking</div>
-                  <div class="LoremIpsumDolorSitAmetAequeTationVisEi" style="align-self: stretch; color: #0A2A42; font-size: 18px; font-family: Inter; font-weight: 400; line-height: 27px; word-wrap: break-word">Do some sports like hiking, cardio, biking is very important for health.</div>
+                <div class="list-content-object-right">
+                    <div class="list-content-object-right-top" >
+                        <div class="list-content-object-right-top-text">
+                            <div class="travelling">Travelling</div>
+                                <div class="travelling-comment" >Visiting wonderful places around the world has no cost!</div>
+                        </div>
+                    </div>
+                    <div class="list-content-object-right-bot" >
+                        <div class="list-content-object-right-bot-text">
+                            <div class="writing">Writing</div>
+                                <div class="writing-comment" style="align-self: stretch; color: #0A2A42; font-size: 18px; font-weight: 400; line-height: 27px; word-wrap: break-word">Write something about your daily activities it’s important as the activites itself</div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-            <div class="MediaObjects" style="flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 32px; display: inline-flex">
-              <div class="MakersMediaObject" style="align-self: stretch; justify-content: flex-start; align-items: flex-start; gap: 16px; display: inline-flex">
-                <div class="Text" style="flex: 1 1 0; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 8px; display: inline-flex">
-                  <div class="PublishWithFigma" style="align-self: stretch; color: black; font-size: 24px; font-family: Inter; font-weight: 600; line-height: 24px; word-wrap: break-word">Travelling</div>
-                  <div class="LoremIpsumDolorSitAmetAequeTationVisEi" style="align-self: stretch; color: #0A2A42; font-size: 18px; font-family: Inter; font-weight: 400; line-height: 27px; word-wrap: break-word">Visiting wonderful places around the world has no cost!</div>
-                </div>
-              </div>
-              <div class="MakersMediaObject" style="align-self: stretch; justify-content: flex-start; align-items: flex-start; gap: 16px; display: inline-flex">
-                <div class="Text" style="flex: 1 1 0; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 8px; display: inline-flex">
-                  <div class="PublishWithFigma" style="align-self: stretch; color: black; font-size: 24px; font-family: Inter; font-weight: 600; line-height: 24px; word-wrap: break-word">Writing</div>
-                  <div class="LoremIpsumDolorSitAmetAequeTationVisEi" style="align-self: stretch; color: #0A2A42; font-size: 18px; font-family: Inter; font-weight: 400; line-height: 27px; word-wrap: break-word">Write something about your daily activities it’s important as the activites itself</div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
     </div>
-    <div class="MakersFooter" style="width: 1440px; height: 336px; padding-left: 20px; padding-right: 20px; background: white; flex-direction: column; justify-content: center; align-items: center; display: inline-flex">
-        <div class="Container" style="width: 1000px; padding-top: 32px; padding-bottom: 32px; justify-content: space-between; align-items: flex-start; gap: 24px; display: inline-flex">
-          <div class="Column" style="width: 240px; height: 127px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 16px; display: inline-flex">
-            <div class="MakersSocialMediaIcons" style="width: 34px; height: 34px; position: relative"></div>
-            <div class="MakingTheWorldABetterPlace" style="align-self: stretch; color: #678398; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 21px; word-wrap: break-word">Making the world a better place.</div>
-            <div class="SocialMedia" style="align-self: stretch; padding-top: 8px; padding-bottom: 8px; justify-content: flex-start; align-items: flex-start; gap: 24px; display: inline-flex">
-              <div class="MakersSocialMediaIcons" style="width: 24px; height: 24px; justify-content: center; align-items: center; display: flex">
-                <div class="Vectors" style="width: 24px; height: 24px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
-                  <div class="Vector" style="width: 4px; height: 4px; border: 1px #678398 solid"></div>
-                  <div class="Vector" style="width: 12px; height: 13px; border: 1px #678398 solid"></div>
-                  <div class="Vector" style="width: 4px; height: 12px; border: 1px #678398 solid"></div>
+    <div class="footer">
+        <div class="footer-container">
+            <div class="footer-column">
+            <div class="footer-title">Making the world a better place.</div>
+            <div class="footer-social-media-container">
+                <div class="MakersSocialMediaIcons" >
+                    <div class="Icons">
+                        <div class="Linkedin">
+                            <a href="https://www.linkedin.com/in/jeromedecinco/">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M16 8C17.5913 8 19.1174 8.63214 20.2426 9.75736C21.3679 10.8826 22 12.4087 22 14V21H18V14C18 13.4696 17.7893 12.9609 17.4142 12.5858C17.0391 12.2107 16.5304 12 16 12C15.4696 12 14.9609 12.2107 14.5858 12.5858C14.2107 12.9609 14 13.4696 14 14V21H10V14C10 12.4087 10.6321 10.8826 11.7574 9.75736C12.8826 8.63214 14.4087 8 16 8ZM16 8V8Z" stroke="#678398" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M6 9H2V21H6V9Z" stroke="#678398" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M4 6C5.10457 6 6 5.10457 6 4C6 2.89543 5.10457 2 4 2C2.89543 2 2 2.89543 2 4C2 5.10457 2.89543 6 4 6Z" stroke="#678398" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="MakersSocialMediaIcons" style="width: 24px; height: 24px; justify-content: center; align-items: center; display: flex">
-                <div class="Vectors" style="width: 24px; height: 24px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
-                  <div class="Vector" style="width: 22px; height: 17.94px; border: 1px #678398 solid"></div>
+                <div class="MakersSocialMediaIcons">
+                <div class="Icons">
+                    <div class="Instagram">
+                        <a href="https://www.instagram.com/carljeromee/?hl=it">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <path d="M17 2H7C4.23858 2 2 4.23858 2 7V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V7C22 4.23858 19.7614 2 17 2Z" stroke="#678398" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M15.9997 11.3701C16.1231 12.2023 15.981 13.0523 15.5935 13.7991C15.206 14.5459 14.5929 15.1515 13.8413 15.5297C13.0898 15.908 12.2382 16.0397 11.4075 15.906C10.5768 15.7723 9.80947 15.3801 9.21455 14.7852C8.61962 14.1903 8.22744 13.4229 8.09377 12.5923C7.96011 11.7616 8.09177 10.91 8.47003 10.1584C8.84829 9.40691 9.45389 8.7938 10.2007 8.4063C10.9475 8.0188 11.7975 7.87665 12.6297 8.00006C13.4786 8.12594 14.2646 8.52152 14.8714 9.12836C15.4782 9.73521 15.8738 10.5211 15.9997 11.3701Z" stroke="#678398" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M17.5 6.5H17.51" stroke="#678398" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
-              </div>
-              <div class="MakersSocialMediaIcons" style="width: 24px; height: 24px; justify-content: center; align-items: center; display: flex">
-                <div class="Vectors" style="width: 24px; height: 24px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
-                  <div class="Vector" style="width: 20px; height: 20px; border: 1px #678398 solid"></div>
-                  <div class="Vector" style="width: 0.01px; height: 0px; border: 1px #678398 solid"></div>
-                  <div class="Vector" style="width: 8px; height: 8px; border: 1px #678398 solid"></div>
                 </div>
-              </div>
+                <div class="MakersSocialMediaIcons">
+                    <div class="Icons">
+                        <div class="Github">
+                            <a href="https://github.com/CodeKaito">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="24" viewBox="0 0 22 24" fill="none">
+                                    <g clip-path="url(#clip0_29_1976)">
+                                    <path d="M15 21.9999V18.1299C15.0375 17.6531 14.9731 17.1737 14.811 16.7237C14.6489 16.2737 14.3929 15.8634 14.06 15.5199C17.2 15.1699 20.5 13.9799 20.5 8.51994C20.4997 7.12376 19.9627 5.78114 19 4.76994C19.4559 3.54844 19.4236 2.19829 18.91 0.999938C18.91 0.999938 17.73 0.649938 15 2.47994C12.708 1.85876 10.292 1.85876 8 2.47994C5.27 0.649938 4.09 0.999938 4.09 0.999938C3.57638 2.19829 3.54414 3.54844 4 4.76994C3.03013 5.78864 2.49252 7.1434 2.5 8.54994C2.5 13.9699 5.8 15.1599 8.94 15.5499C8.611 15.8899 8.35726 16.2953 8.19531 16.7399C8.03335 17.1844 7.96681 17.658 8 18.1299V21.9999M8 18.9999C3 20.4999 3 16.4999 1 15.9999L8 18.9999Z" stroke="#678398" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </g>
+                                    <defs>
+                                    <clipPath id="clip0_29_1976">
+                                    <rect width="22" height="24" fill="white"/>
+                                    </clipPath>
+                                    </defs>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="Column" style="width: 200px; height: 130px; flex-direction: column; justify-content: space-between; align-items: flex-end; gap: 20px; display: inline-flex">
-            <div class="Company" style="align-self: stretch; height: 31px; color: #678398; font-size: 14px; font-family: Inter; font-weight: 600; word-wrap: break-word">© 2023. All rights reserved.</div>
-          </div>
         </div>
-      </div>
+        <div class="Column">
+            <div class="Company" >CodeKaito © 2023. All rights reserved.</div>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
