--- a/challenge/module1-lecture2/index.html
+++ b/challenge/module1-lecture2/index.html
@@ -28,7 +28,9 @@
           <div class="google-1-parent">
             <img class="google-1-icon" alt="" src="./public/google-1@2x.png" />
 
-            <div class="classic">Continue With Google</div>
+            <a href="https://accounts.google.com/v3/signin/confirmidentifier?hl=IT&ifkv=AXo7B7UcWsKjv-B9du5VQHDDTRaC1kvuoHyvgFDJtFY6zIi--dYdSFCHD2k2oxvHqmW1Qm1KJ75wEg&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-838063753%3A1691735268562478">
+              <div class="classic">Continue With Google</div>
+            </a>
           </div>
         </div>
         <div class="heading">
@@ -36,11 +38,11 @@
         </div>
         <div class="frame2">
           <div class="language">
-            <div class="australia1-1-parent">
+            <div class="it-parent-1">
               <img
-                class="australia1-1-icon"
+                class="it-icon"
                 alt=""
-                src="./public/australia1-1@2x.png"
+                src="./public/it.png"
               />
 
               <div class="it-parent">
@@ -58,38 +60,30 @@
         <div class="frame3">
           <div class="form">
             <div class="frame-parent">
-              <div class="name-wrapper">
-                <div class="classic">Name</div>
+              <div>
+                <input type="text" class="name-wrapper" placeholder="Name">
               </div>
-              <div class="name-wrapper">
-                <div class="classic">Family Name</div>
+              <div>
+                <input type="text" class="name-wrapper" placeholder="Family Name">
               </div>
-              <div class="name-wrapper">
-                <div class="classic">E-mail</div>
+              <div>
+                <input type="email" class="name-wrapper" placeholder="Insert your E-Mail">
               </div>
-            </div>
-            <div class="frame-group">
-              <div class="name-wrapper">
-                <div class="classic">Password</div>
+              <div>
+                <input type="password" class="name-wrapper" placeholder="Choose a Password">
               </div>
-              <div class="name-wrapper">
-                <div class="classic">Phone Number</div>
+              <div>
+                <input type="tel" class="name-wrapper" placeholder="Insert your phone number">
               </div>
-              <div class="name-wrapper">
-                <div class="classic">Email</div>
+              <div>
+                <input type="date" id="dateInput" name="date" class="birthdate" placeholder="Insert your phone number">
               </div>
               <div class="rectangle-parent5">
-                <div class="frame-child4"></div>
-                <div class="classic">Accept Terms and Conditions</div>
+                  <input type="checkbox">
+                  <label for="checkbox">Accept Terms and Conditions</label>
               </div>
+              <input type="submit" value="Register" class="register-submit">
             </div>
-            <div class="register-wrapper">
-              <div class="register1">Register</div>
-            </div>
-          </div>
-          <div class="already-have-an-container">
-            <span>Already have an account? </span>
-            <span class="log-in">Log in</span>
           </div>
         </div>
       </div>
