--- a/challenge/module1-lecture2/index.html
+++ b/challenge/module1-lecture2/index.html
@@ -93,6 +93,7 @@
         <div class="tell-us-what">Tell us what you are into</div>
         <div class="rectangle-parent">
           <div class="frame-item"></div>
+          <input type="checkbox" class="frame-item">
           <div class="classic">HINDI</div>
         </div>
         <div class="rectangle-group">
