--- a/challenge/module1-lecture2/index.html
+++ b/challenge/module1-lecture2/index.html
@@ -14,6 +14,7 @@
     <link
       rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;600&display=swap"
     />
+    <title>Echotunes</title>
   </head>
   <body>
     <div class="register">
