--- a/challenge/module1-lecture3/index.html
+++ b/challenge/module1-lecture3/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap">
+    <link rel="icon" href="assets/favicon.ico">
+    <link rel="stylesheet" href="./style.css" />
+    <title>Lake Braies</title>
 </head>
 <body>
-    
+    <div class="main-section">
+        <div class="image-container lago-di-braies">
+        </div>
+            <p>Author:
+                <a class="author" href="https://www.shutterstock.com/it/g/pietrodegrandi">Pietro De Grandi</a></p>
+                    <h1>Lago di Braies</h1>
+                        <h3>La perla delle Dolomiti | Val Pusteria, Dolomiti</h3>
+                        <hr />
+                            <p>
+                                Il Lago di Braies, come il Lago di Dobbiaco, è un lago di sbarramento formatosi in seguito ad una frana, staccatasi dal Sasso del Signore, che ha interrotto il corso del Rio Braies. Reso famoso dalla fiction di Rai 1 ‘Un passo dal cielo’ con Terence Hill prima e Daniele Liotti poi, con i suoi 36 metri di profondità è uno dei laghi più profondi della provincia autonomia di Bolzano.
+                            </p>
+                        <hr />
+                        <h6 class="luoghi-correlati">Luoghi correlati</h6>
+                        <ul>
+                            <a class="list-content" href="./lago-di-dobbiaco.html"><li>Lago di Dobbiaco</li></a>
+                            <a class="list-content" href="./lago-di-anterselva.html"><li>Lago di Anterselva</li></a>
+                            <a class="list-content" href="./lago-di-landro.html"><li>Lago di Landro</li></a>
+                            <a class="list-content" href="./lago-hermoso.html"><li>Lago Hermoso</li></a>
+                        </ul>
+    </div>
+    <footer>
+        <a href="index.html"><h4 class="homepage">Home</h4></a>
+    </footer>
 </body>
 </html>
