--- a/challenge/module1-lecture3/lago-di-landro.html
+++ b/challenge/module1-lecture3/lago-di-landro.html
@@ -15,10 +15,14 @@
             <p>Author:
                 <a class="author" href="https://unsplash.com/it/@giordanorossoni?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Giordano Rossoni</a></p>
                     <h1>Lago di Landro</h1>
-                        <h3>Il gioiello color turchese della natura | Val Pusteria, Dolomiti</h3>
+                        <h3>Il gioiello color turchese della natura | Val di Landro, Alto Adige</h3>
                         <hr />
                             <p>
-                                Boschi di conifere dal verde lussureggiante, il paesaggio alpino mozzafiato del Gruppo delle Vedrette di Ries e, al centro di tutto questo, un’acqua scintillante dal color turchese. Questo è lo scenario incantevole del Lago di Anterselva, uno dei laghi più belli delle Alpi! Con 44 ettari ed una profondità di 38 metri, questa magica perla della nostra Valle Blu è anche il terzo lago di montagna più grande dell'Alto Adige e si trova alla fine della Valle di Anterselva, nelle vicinanze del noto Passo Stalle, al confine con l'Austria. Qui, a un'altitudine di circa 1.640 m, le famiglie, gli amanti della natura e gli appassionati di outdoor troveranno in ogni periodo dell'anno innumerevoli opportunità per tante attività all'aperto, nel Parco Naturale delle Vedrette di Ries-Aurina.
+                                Il lago di Landro (Dürrensee in tedesco) si trova in fondo alla Val di Landro, in Alto Adige, nel comune di Dobbiaco a pochi chilometri a nord dal bivio, presso Carbonin, che si biforca verso il Lago di Misurina o Cimabanche, ad una distanza di circa venti chilometri da Cortina d'Ampezzo.
+
+                                Presso il lago si possono ammirare le ripide pareti rocciose delle Dolomiti, nel territorio del Parco naturale Dolomiti di Sesto. D'inverno per molti mesi il lago è ghiacciato. È abitualmente utilizzato per un anello per lo sci di fondo che costituisce una interessante variante della pista ciclabile Dobbiaco-Cortina.
+
+                                Sulle sponde del lago si trova un cippo con una ruota, posto a ricordo della teleferica che dal lago portava rifornimenti alle postazioni sul monte Piana durante la prima guerra mondiale.
                             </p>
                         <hr />
                         <h6 class="luoghi-correlati">Luoghi correlati</h6>
