--- a/challenge/module1-lecture3/index.html
+++ b/challenge/module1-lecture3/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap">
     <link rel="icon" href="assets/favicon.ico">
     <link rel="stylesheet" href="./style.css" />
-    <title>Lake Braies</title>
+    <title>Lago di Braies</title>
 </head>
 <body>
     <div class="main-section">
