--- a/challenge/module1-lecture3/lago-di-anterselva.html
+++ b/challenge/module1-lecture3/lago-di-anterselva.html
@@ -23,7 +23,7 @@
                                 Il Lago di Anterselva, un lago alpino a 1.642 m s.l.m. che copre una superficie di ben 44 ettari, è situato nel comune di Rasun-Anterselva e viene abbracciato dal Parco Naturale Vedrette di Ries-Aurina. L'area invita a stupende escursioni in alta montagna e gite in mountain bike. Chi preferisce invece una passeggiata tranquilla, si può avventurare lungo il percorso didattico che si snoda intorno al lago. Questo Sentiero Natura Lago di Anterselva consente di conoscere da vicino la flora e fauna della valle, mentre diverse stazioni invitano a giochi interessanti nella natura. La famosa leggenda che avvolge questo lago pittoresco, narra che alla riva c'erano tre masi bellissimi.
                             </p>
                         <hr />
-                        <h6 class="luoghi-correlati">Luoghi correlati</h6>
+                        <h6 class="luoghi-correlati anterselva">Luoghi correlati</h6>
                         <ul>
                             <a class="list-content" href="index.html"><li>Lago di Braies</li></a>
                             <a class="list-content" href="./lago-di-dobbiaco.html"><li>Lago di Dobbiaco</li></a>
