--- a/challenge/module1-lecture3/lago-di-dobbiaco.html
+++ b/challenge/module1-lecture3/lago-di-dobbiaco.html
@@ -21,7 +21,7 @@
                                 Il Lago di Dobbiaco è uno specchio d'acqua relativamente piccolo e si trova nell'omonimo paese a 1.176 m s.l.m. Suo immissario ed emissario è il fiume Rienza, il lago si formò nell'antichità per via di diverse frane. Il Lago di Dobbiaco si trova al confine tra due parchi naturali: Dolomiti di Sesto e Fanes-Senes-Braies, il suo perimetro è di 4,5 km.
                             </p>
                         <hr />
-                        <h6 class="luoghi-correlati">Luoghi correlati</h6>
+                        <h6 class="luoghi-correlati dobbiaco">Luoghi correlati</h6>
                         <ul>
                             <a class="list-content" href="index.html"><li>Lago di Braies</li></a>
                             <a class="list-content" href="./lago-di-anterselva.html"><li>Lago di Anterselva</li></a>
