--- a/challenge/module1-lecture3/lago-di-landro.html
+++ b/challenge/module1-lecture3/lago-di-landro.html
@@ -25,7 +25,7 @@
                                 Sulle sponde del lago si trova un cippo con una ruota, posto a ricordo della teleferica che dal lago portava rifornimenti alle postazioni sul monte Piana durante la prima guerra mondiale.
                             </p>
                         <hr />
-                        <h6 class="luoghi-correlati">Luoghi correlati</h6>
+                        <h6 class="luoghi-correlati landro">Luoghi correlati</h6>
                         <ul>
                             <a class="list-content" href="index.html"><li>Lago di Braies</li></a>
                             <a class="list-content" href="./lago-di-dobbiaco.html"><li>Lago di Dobbiaco</li></a>
