--- a/challenge/module1-lecture3/lago-hermoso.html
+++ b/challenge/module1-lecture3/lago-hermoso.html
@@ -23,7 +23,7 @@
                                 Il lago Hermoso ha una bellezza esuberante; le sue acque cristalline rimangono totalmente calme durante la notte e al mattino. Le sue coste sono circondate da foreste autoctone, ad eccezione delle aree abbattute dai proprietari, con abbondanza di Coihues, Lengas, Ñires e alcuni esemplari di Raulí.
                             </p>
                         <hr />
-                        <h6 class="luoghi-correlati">Luoghi correlati</h6>
+                        <h6 class="luoghi-correlati hermoso">Luoghi correlati</h6>
                         <ul>
                             <a class="list-content" href="index.html"><li>Lago di Braies</li></a>
                             <a class="list-content" href="./lago-di-dobbiaco.html"><li>Lago di Dobbiaco</li></a>
