--- a/challenge/module1-lecture3/index.html
+++ b/challenge/module1-lecture3/index.html
@@ -21,7 +21,7 @@
                                 Il Lago di Braies, come il Lago di Dobbiaco, è un lago di sbarramento formatosi in seguito ad una frana, staccatasi dal Sasso del Signore, che ha interrotto il corso del Rio Braies. Reso famoso dalla fiction di Rai 1 ‘Un passo dal cielo’ con Terence Hill prima e Daniele Liotti poi, con i suoi 36 metri di profondità è uno dei laghi più profondi della provincia autonomia di Bolzano.
                             </p>
                         <hr />
-                        <h6 class="luoghi-correlati">Luoghi correlati</h6>
+                        <h6 class="luoghi-correlati braies">Luoghi correlati</h6>
                         <ul>
                             <a class="list-content" href="./lago-di-dobbiaco.html"><li>Lago di Dobbiaco</li></a>
                             <a class="list-content" href="./lago-di-anterselva.html"><li>Lago di Anterselva</li></a>
