--- a/challenge/module1-lecture5/index.html
+++ b/challenge/module1-lecture5/index.html
@@ -38,29 +38,19 @@
     <div class="main">
       <div class="topbar">
         <img src="./assets/logo.png" class="logo" alt="Youtube Logo">
-        <div class="search-wrapper">
-          <input type="text" placeholder="Search on YouTube" />
-          <button class="search-btn">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </button>
-          <div class="top-icon mic-icon">
-            <i class="fa-solid fa-microphone mic"></i>
+        <div class="nav-middle flex-div">
+          <div class="search flex-div">
+              <input type="text" placeholder="Search" id="">
+              <i class="fa-solid fa-magnifying-glass"></i>
           </div>
-        </div>
-        <div class="icons-wrapper">
-          <div class="top-icon">
-            <i class="fa-solid fa-video-slash"></i>
-          </div>
-          <div class="top-icon">
-            <i class="fa-solid fa-bell"></i>
-          </div>
-          <div class="top-icon">
-            <i class="fa-solid fa-braille"></i>
-          </div>
-          <div>
-            <img src="./assets/user.jpeg" class="user" alt="User's Image">
-          </div>
-        </div>
+          <i class="fa-solid fa-microphone mic"></i>
+      </div>
+        <div class="nav-right flex-div">
+          <i class="fa-solid fa-braille"></i>
+          <i class="fa-solid fa-bell"></i>
+          <i class="fa-solid fa-video-slash"></i>
+          <img src="./assets/user.jpeg" class="user" alt="User's Image">
+      </div>
       </div>
       <div class="content">
         <div class="content-item">
